update lib to use kafka 2.4.1 libraries